fixed align to justify

--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body {
 
 .article-title {
   border-top: 1.5rem solid var(--primary-lighten);
-  align-items: center;
+  justify-content: center;
   width: fit-content;
   position: relative;
   margin-left: 35%;
@@ -70,7 +70,7 @@ body {
 .article-image {
   height: 10rem;
   width: 10rem;
-  align-content: center;
+  justify-content: center;
   margin-right: 5%;
 }
 
